plugins {
    id 'java'
    id 'maven-publish'
    id("com.gradleup.shadow") version "9.3.1"
}

group = 'dev.oakheart'
version = '1.3.7'

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        name = "papermc-repo"
        url = "https://repo.papermc.io/repository/maven-public/"
    }
    maven {
        name = "codemc-repo"
        url = "https://repo.codemc.io/repository/maven-public/"
    }
    maven {
        name = "jitpack"
        url = "https://jitpack.io"
    }
    maven {
        name = "placeholderapi"
        url = "https://repo.extendedclip.com/content/repositories/placeholderapi/"
    }
    maven {
        name = "shopkeepers-repo"
        url = "https://raw.githubusercontent.com/Shopkeepers/Repository/main/releases/"
    }
    maven {
        name = "nexomc"
        url = "https://repo.nexomc.com/releases/"
    }
}

dependencies {
    compileOnly("io.papermc.paper:paper-api:26.1.2.build.+")
    compileOnly("com.nisovin.shopkeepers:ShopkeepersAPI:2.24.0")
    compileOnly("com.github.retrooper:packetevents-spigot:2.10.0")
    compileOnly("me.clip:placeholderapi:2.11.6")
    compileOnly("org.xerial:sqlite-jdbc:3.42.0.0")
    compileOnly("com.nexomc:nexo:1.20.0")
    compileOnly("com.github.LoneDev6:api-itemsadder:3.6.1")
    implementation("org.bstats:bstats-bukkit:3.1.0")
    implementation("dev.oakheart:oakheart-core:1.2.0")
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(25)
}

compileJava {
    options.encoding = 'UTF-8'
    options.release = 25
    options.compilerArgs += ['-Xlint:deprecation', '-Xlint:unchecked']
}

processResources {
    def props = [version: version]
    inputs.properties props
    filteringCharset 'UTF-8'
    filesMatching('paper-plugin.yml') {
        expand props
    }
}

shadowJar {
    archiveBaseName.set('ShopkeepersStockControl')
    archiveClassifier.set('')
    relocate 'org.bstats', 'dev.oakheart.stockcontrol.bstats'
    relocate 'dev.oakheart.config', 'dev.oakheart.stockcontrol.libs.config'
    relocate 'dev.oakheart.message', 'dev.oakheart.stockcontrol.libs.message'
    relocate 'dev.oakheart.command', 'dev.oakheart.stockcontrol.libs.command'
    relocate 'dev.oakheart.util', 'dev.oakheart.stockcontrol.libs.util'
    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'
    exclude 'META-INF/DEPENDENCIES'
}

build.dependsOn shadowJar

// Publish the un-shaded jar to mavenLocal so OakheartWeb can compileOnly against
// the SSSC API (ShopkeepersStockControl, ConfigManager, PoolRotationManager, etc.).
// The runtime plugin jar in plugins/ is the shadowJar; relocated namespaces don't
// affect the dev.oakheart.stockcontrol.* classes consumers actually link against.
publishing {
    publications {
        maven(MavenPublication) {
            artifactId = 'shopkeepers-stock-control'
            from components.java
        }
    }
    repositories {
        mavenLocal()
    }
}
